Improve `log4j-perf-test` instructions